Enhance profile module

--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
@@ -3,6 +3,14 @@ body {
 	margin:auto;
 	width:980px;
 }
+.copyright {
+	padding-bottom:20px;
+	text-align:center;
+}
+.copyright strong span {
+	color:#045A8B;
+	font-weight:bold;
+}
 .area  {
 	position:relative;
 }
