--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
@@ -2,4 +2,5 @@
 @import url("base.css");
 @import url("profile.css");
 @import url("blog.css");
+@import url("msg.css");
 @import url("setting.css");
