--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/profile.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/profile.css
@@ -47,21 +47,16 @@
     position: relative;
 	background-color:#DDF0F8;
 }
-.project .project-logo {
-    float:right;
-    padding:2px;
-    background: #FFFFFF;
-    border: 1px solid #DDDDDD;
-}
-.project .project-logo img {
+.project img.thumbnail {
     width:80px;
-	height:80px;
+    height:80px;
+    top:10px;
+    right:10px;
 }
 .project .project-title {
 	margin-bottom:10px;
 }
 .project .project-title h3 {
-
 	font-size:16px;
 	font-weight:bold;
 }
@@ -82,18 +77,27 @@
 	font-weight:bold;
 }
 
+.project-action {
+    padding:10px;
+}
+
+.project-status {
+    padding:10px;
+}
+
 .project-links {
     padding:10px;
 }
 .project-links li {
     display: inline-block;
-    margin-bottom: 5px;
+    padding-bottom: 5px;
 }
-.project-links .project-link {
-    padding:2px;
-    border: 1px solid #DDDDDD;
+.project-links li.last,
+.project-links li.only {
+    padding-bottom: 0;
 }
-.project-links .project-link img {
+.project-links .project-link img.thumbnail {
+    position:static;
     width:50px;
     height:50px;
 }
