--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
@@ -4,5 +4,5 @@
 @import url("profile.css");
 @import url("blog.css");
 @import url("msg.css");
-@import url("setting.css");
+@import url("admin.css");
 
