--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url("base.css");
+@import url("site.css");
 @import url("console.css");
 @import url("profile.css");
 @import url("blog.css");
