Has done the avatar crop!

--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/profile.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/profile.css
@@ -190,3 +190,15 @@
     width:40px;
     height:40px;
 }
+
+div.target-avatar img {
+    position: inherit;
+}
+
+div.profile-user {
+    padding: 10px;
+}
+
+div.profile-user-edit {
+    padding: 10px;
+}
