完善功能表单，并清理无用代码 1.为相册模块增加表单校验 2.清理无用的 jsp 标签控件代码

--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
@@ -24,6 +24,7 @@ ul {
     padding-bottom: 80px;
 }
 .doc-ft p {
+    margin: 0;
     padding: 10px 0;
 }
 @media (max-width: 979px) {
@@ -95,8 +96,9 @@ ul {
 #blog-post-edit div.editor {
     padding-bottom: 10px;
 }
-#blog-post-edit button {
+#blog-post-edit button[type=submit] {
     margin-top: 10px;
+    display: block;
 }
 #blog-post-edit .control-label {
     font-weight: bold;
