新增 好友模块，功能还需要进一步完善...

--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
@@ -109,7 +109,13 @@ ul {
 #blog-category-edit .control-label {
     font-weight: bold;
 }
-
+/* TeamMemberWidget edit */
+.team-member-edit .thumbnails .thumbnail {
+    background-color: #bce8f1;
+}
+.team-member-edit .tab-content {
+    overflow: visible;
+}
 
 /* Environment */
 .summary-os .table {
