添加 2 级子菜单

--- a/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
+++ b/focusns-web/src/main/webapp/WEB-INF/themes/default/css/style.css
@@ -35,6 +35,11 @@ ul {
 .alert {
     padding: 14px 8px;
 }
+
+.menu-sub h2 {
+    line-height: 20px;
+}
+
 /* SignWidget */
 #signin .widget-head h3 {
     padding-left: 130px;
